// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts \`theme\` prop 1`] = `
.c0 {
  text-overflow: ellipsis;
  font-size: 15px;
  line-height: 1.6;
  color: hotpink;
}

<p
  className="c0"
>
  sample text
</p>
`;

exports[`renders 1`] = `
.c0 {
  text-overflow: ellipsis;
  font-size: 15px;
  line-height: 1.6;
  color: black;
}

<p
  className="c0"
>
  sample text
</p>
`;
